--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-image-gallery": "^1.0.8"
+    "react-material-ui-carousel": "^2.0.2"
   }
 }
